Uploaded image for project: 'Parquet'
  1. Parquet
  2. PARQUET-812

[C++] Failure reading BYTE_ARRAY data from file in parquet-compatibility project

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • None
    • cpp-1.0.0
    • parquet-cpp
    • None

    Description

      I see the odd exception from the Python side:

      ArrowException: NotImplemented: list<: uint8>
      

      The schema is:

      $ debug/parquet-dump-schema ~/Downloads/nation.impala.parquet 
      required group schema {
        optional int32 n_nationkey
        optional byte_array n_name
        optional int32 n_regionkey
        optional byte_array n_comment
      }
      

      This may have been introduced by https://github.com/apache/parquet-cpp/commit/8487142f6d5a60d12e3068ac226b2b5dfe178350

      Attachments

        1. nation.impala.parquet
          3 kB
          Wes McKinney

        Issue Links

          Activity

            People

              wesm Wes McKinney
              wesm Wes McKinney
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: