PARQUET-812: Read binary type